[package]
name = "r53"
version = "0.1.0"
authors = ["hanfeng <ben.han.cn@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.32", default-features = false}
failure = { git = "https://github.com/ben-han-cn/cement-rs", package = "failure_ext"}
rand = "0.7"

[lib]
name = "r53"
path = "src/lib.rs"
