[package]
name = "r53"
version = "0.1.0"
authors = ["hanfeng <ben.han.cn@gmail.com>"]
edition = "2018"

[lib]
name = "r53"
path = "src/lib.rs"

[dependencies]
clap = { version = "2.32", default-features = false}
rand = { version = "0.8"}
anyhow = "1.0"
rdata_derive = { path = "rdata-derive" }
base64 = "0.13.0"
time = { version = "0.2.27", default-features = false}
